--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 \input{other/preamble}
 
 \title{The OPE for Dark Jets}
-\author{Matteo Borrello \thanks{INFN, Florence section \& Physics Department, University of Florence (matteo.borrello@edu.unifi.it)} \and Andrea Clini \thanks{Physics Department, University of Milan (andrea.clini@unimi.it)} }
+\author{Matteo Borrello \thanks{INFN, Florence section \& Physics Department, University of Florence (matteo.borrello@unifi.it)} \and Andrea Clini \thanks{Physics Department, University of Milan (andrea.clini@unimi.it)} }
 \date{\today} 
 
 
@@ -14,6 +14,8 @@
 \maketitle
 \input{body/abstract}  
 \tableofcontents
+
+\include{other/README}
 
 \newpage 
 \input{other/checklist}
