--- a/main.tex
+++ b/main.tex
@@ -15,8 +15,7 @@
 \input{body/abstract}  
 \tableofcontents
 
-\include{other/README}
-
+\include{other/conventions}
 \newpage 
 \input{other/checklist}
 
