--- a/other/checklist.tex
+++ b/other/checklist.tex
@@ -1,17 +1,16 @@
-%
-%
-{
-\color{red}
-%
-%
-\textbf{What is missing?}
-\begin{enumerate}
+%========================================================
+\section{README: Checklist and what is missing?}
+%=======================================================
+
+%---------------------------------------------------------
+{\color{red}
+\subsection*{What is missing?}
+%--------------------------------------------------------
+
+\begin{itemize}
     \item everything
-\end{enumerate}
-%
+\end{itemize}
 
 }
-
-
 
 
