--- a/body/abstract.tex
+++ b/body/abstract.tex
@@ -1,4 +1,4 @@
 %---------------------------------------------------------------
 \begin{abstract}
-In this work, we investigate the phenomenological consequences of general Dark Sectors whose dynamics can be described by a conformal field theory (CFT), deformed by irrelevant operators that describe the interactions with the Standard Model fields. At low energies the CFT flows to a gapped phase whose typical scale can be well below the electroweak scale, providing a perfect theoretical target for the present and future intensity frontier experiments. We study neutrino experiments, considering the production of CFT states that then interact with the detector material through deep inelastic scattering (DIS). As a byproduct of our study, we obtain simple expressions for the DIS of general portal interactions making a judicious use of the operator product expansion.
+In this work, we investigate the phenomenological consequences of general Dark Sectors whose dynamics can be described by a conformal field theory (CFT), deformed by irrelevant operators that describe the interactions with the Standard Model fields~\cite{Chacko:2020zze,Strassler:2008bv,Strassler:2006im,Georgi:2007ek,Georgi:2007si,Grinstein:2008qk,Knapen:2016hky,Borrello:2025hal}. At low energies the CFT flows to a gapped phase~\cite{Randall:1999ee,Rattazzi:2000hs} whose typical scale can be well below the electroweak scale, providing a perfect theoretical target for the present and future intensity frontier experiments~\cite{Costa:2022pxv,Contino:2020tix}. We study neutrino experiments~\cite{Beacham:2019nyx,DUNE:2015lol,Alekhin:2015byh,NuTeV:2001whx,Hyper-Kamiokande:2018ofw}, considering the production of CFT states that then interact with the detector material through deep inelastic scattering (DIS). As a byproduct of our study, we obtain simple expressions for the DIS of general portal interactions making a judicious use of the operator product expansion~\cite{Klehfoth:2022vgx,Hollands:2023txn}.
 \end{abstract}
