--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -4,9 +4,18 @@
 %===============================================================
 
 %---------------------------------------------------------------
+Modern Cosmological and astrophysical observation provide compelling evidence for the existence of Probing the nature of Dark Matter (DM) via its effects of visible matter and cosmic structures at different scales. Accounting for its existence--and cosmological abundance--requires to enlarge the particle content of SM with at least one new particle. Unfortunately, the particle properties of DM such as mass, spin, and interactions remains unknown. 
 
+It is important to note that DM is at least a two component fluid: neutrinos cannot account for the total DM abundance but they perfectly fit in the description of dark particles. Hence, it seems very likely that the nature of DM is intrinsically multicomponent, with a new ensemble of degrees of freedom and a complex dynamics of particles and interactions--both weak and strong--to populate the Dark Sector (DS). In this context, it is important to explore DM particles production from collision of SM states with sufficient energy. Unlike direct and indirect detection, accelerator experiments do not suffer from any suppression coming from the fraction of the DM species, shining as the best opportunity to detect small fractions of DM interacting with SM. SM neutrinos are a perfect example of this gain: despite their small relic abundance, they are abundantly produced at accelerators via weak interactions.  
 
+This work is devoted to the study of a new signature which is unique of strongly coupled DS. We explore the prospects for the detection of LDSPs scattering in the detector material, an experimental strategy that is complementary to the missing energy signatures at colliders. The novel idea is that differently from the usual neutrino events encountered, the deep inelastic regime happens in the DS with the LDSP disintegrating into a dark jet, as shown in \cref{fig:detstrategy}. On the SM side, the LDSP can scatter either on electron or on proton (or on both). We will study the signals associated with these processes and the possibility of discriminating them from the background from SM neutrino scatterings. DIS events where the LDSP fragments into a dark showering process are of profound interest for at least two reasons: i) from the theoretical point of view, they require the application of the OPE technique, but generalized to a strongly coupled CFT. In this setup the OPE approximation is the only way to compute the DIS signal rate since the PDFs of the LDSP are not available; ii) from a more phenomenological point of view, many high-intensity neutrino experiments will provide interesting data in the next years, such as FASER, DUNE, and SHIP, shining as a unique opportunity to test irrelevant portals involving light new physics.
 
+\begin{figure}[t!]
+    \centering
+    \includegraphics[width=0.9\linewidth]{images/detectionstrategy.pdf}
+    \caption{Schematic picture of our strategy: DS states are produced from the interaction of two SM states. Due to the strongly coupled dark dynamics, the dark excitation relaxes via a process of dark showering leading to the formation of a multiparticle final state.}
+    \label{fig:detstrategy}
+\end{figure}
 
 %---------------------------------------------------------------
 \vspace{5mm}
@@ -15,4 +24,4 @@
 \vspace{2mm}
 
 \noindent
-The notes are organized as follows\dots
+The work is organized as follows. In \cref{sec:smdis} we review Standard Model (SM) neutrino DIS under the light of OPE, highlighting the limits and successes of this effective approach. In \cref{sec:dsope} we discuss the main properties of OPE expansions useful for the rates required in this work. In \cref{sec:pheno} we derive the main phenomenological consequences of applying the OPE to past, current and upcoming experiments.
