--- a/other/conventions.tex
+++ b/other/conventions.tex
@@ -1,5 +1,5 @@
-\section{README: Collaborating, conventions and examples (in progress)}
-
+\section*{README: Collaborating, conventions and examples (in progress)}
+\addcontentsline{toc}{section}{README: Collaborating, conventions and examples}
 %------------------------------------------------------------------------------------------
 \subsection*{Conventions for Notes, Questions, TODOs, Problems etc}
 
