--- a/other/preamble.tex
+++ b/other/preamble.tex
@@ -271,7 +271,7 @@
 \tikzfeynmanset{warn luatex=false}
 \usepackage{relsize}
 \usepackage{stackengine}
-
+\usepackage[capitalise, english]{cleveref}
 \usepackage{tikz}
 \usetikzlibrary{tikzmark,calc}
 
