--- a/other/checklist.tex
+++ b/other/checklist.tex
@@ -1,5 +1,6 @@
 %========================================================
-\section{README: Checklist and what is missing?}
+\section*{README: Checklist and what is missing?}
+\addcontentsline{toc}{section}{README: Checklist and what is missing?}
 %=======================================================
 
 %---------------------------------------------------------
@@ -8,7 +9,11 @@
 %--------------------------------------------------------
 
 \begin{itemize}
-    \item everything
+    \item rewriting the ope for sm, showing that it works. now based on peskin, can we find something new to say also on the math side?
+    \item choosing the portal(s?). how many ldsp can we have as bullets? are the bullets stable or unstable on detector scales? can they emerge in lhc?
+    \item rewriting the ope for ds
+    \item choosing the experiment(s?). do we want to have a reliable prediction for initial fluxes? 
+   \item More on the formal side it would be very interesting to better understand the OPE expansion of DIS in explicit realizations of gapped theories with a conformal window such as Randall-Sundrum, and relate our result to the unparticle idea of Georgi. This investigation can shed further light on what can be said about the DIS from the purely IR perspective.
 \end{itemize}
 
 }
