--- a/body/acknowledgments.tex
+++ b/body/acknowledgments.tex
@@ -1,4 +1,4 @@
 \section*{Acknowledgments}
  The authors have no competing interests.
- Matteo Borrello thanks\dots and is supported by \dots
- Andrea Clini thanks\dots and is supported by \dots
+ Rambo thanks\dots and is supported by \dots
+ La Pimpa thanks\dots and is supported by \dots
