--- a/other/my_preamble.tex
+++ b/other/my_preamble.tex
@@ -1,3 +1,11 @@
+
+%===================================================================
+% ==================================================================
+%========= THIS FILE SHOULD EVENTUALLY BECOME A file.sty ===========
+%===================================================================
+% ==================================================================
+%===================================================================
+
 % ==================================================================
 %====================== README (in progress)======================
 %===================================================================
