--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -1,3 +1,103 @@
 \section*{Brainstorming}
 \addcontentsline{toc}{section}{Brainstorming}
 %------------------------------------------------------------------------------------------
+
+
+Let the internal space of the fluid be $\mathcal{M}^{(3)}\simeq \R^3$, including also it proper time we have $\mathcal{M}^{(4)}\simeq \R^{1,3}$ isomorphic to Minkowski spacetime.
+For the moment, we take flat spacetime with metric $\eta_{\mu\nu}=\text{diag}(-1,1,1,1)$, we will later generalize to nonflat metrics.
+The fluid configuration at time $t$ is described by a map
+\begin{equation}
+    \phi^\mu(t,x^i):  \R^4 \to \mathcal{M}^{(4)}
+\end{equation}
+%
+We define the 3x3 matrix
+\begin{equation}
+    B^{ij}=\partial_\mu \phi^i \partial^\mu \phi^j \quad i,j=1,2,3,
+\end{equation}
+The 4-velocity is obtained by demanding the $\phi$ to be indeed comoving coordinates for the fluid and we get
+\begin{equation}
+    u^\mu=\frac{1}{\sqrt{B}}\epsilon^{\mu\alpha\beta\gamma}\partial_\alpha \phi^1 \partial_\beta \phi^2 \partial_\gamma \phi^3=\frac{1}{6\sqrt{B}}\epsilon^{\mu\alpha\beta\gamma}\epsilon_{ijk}\partial_\alpha \phi^i \partial_\beta \phi^j \partial_\gamma \phi^k,
+\end{equation}
+satisfying the condition $u^\mu \partial_\mu \phi^i=0$ and the normalization $u_\mu u^\mu=-1$.
+
+Demanding the action be Lorentz invariant and invariant under volume preserving \emph{spatial} diffeomorphisms, we find only two invariants namely
+\begin{equation}
+    B:=\det B^{ij}, \quad Y:=u^\mu \partial_\mu \phi^0.
+\end{equation}
+The action is then, for a generic function $F$,
+\begin{equation}
+    S=\int d^4x F(B,Y).
+\end{equation}
+
+The energy momentum tensor is obtained by varying the action wrt the cohordinates
+\begin{align}
+\begin{aligned}
+    T^{\mu}{}_{\nu}
+    &= \frac{\delta \mathcal{L}}{\delta (\partial_\mu \phi^A)}\,\partial_\nu \phi^A - \mathcal{L}\,\delta^{\mu}{}_{\nu} \\
+    &= \bigl(Y \partial_YF - 2B \partial_BF\bigr) u^{\mu} u_{\nu}
+       + \bigl(F - 2B \partial_BF\bigr)\,\delta^{\mu}{}_{\nu},
+\end{aligned}
+\end{align}
+%
+\begin{proof}
+Indeed we have
+\begin{align}
+\begin{aligned}
+    \frac{\delta B}{\delta (\partial_\mu \phi^0)} &= 0,
+    &\qquad
+    \frac{\delta B}{\delta (\partial_\mu \phi^I)} &= B (B^{-1})^{ij} \bigl(\delta^I_i \partial^\mu \phi_j + \delta^I_j \partial^\mu \phi_i\bigr)
+    = 2 B (B^{-1})^{Ij} \partial^\mu \phi_j,
+    \\[4pt]
+    \frac{\delta Y}{\delta (\partial_\mu \phi^0)} &= u^\mu,
+    &\qquad
+    \frac{\delta Y}{\delta (\partial_\mu \phi^I)} &= \frac{1}{2\sqrt{B}}
+    \epsilon^{\lambda\mu\beta\gamma}\epsilon_{Ijk}\partial_\beta\phi^j\partial_\gamma\phi^k\partial_\lambda\phi^0
+    - Y \frac{1}{2B}\frac{\delta B}{\delta (\partial_\mu \phi^I)}
+    \\
+    &&&= \frac{1}{2\sqrt{B}}
+    \epsilon^{\lambda\mu\beta\gamma}\epsilon_{Ijk}\partial_\beta\phi^j\partial_\gamma\phi^k\partial_\lambda\phi^0
+    - Y (B^{-1})^{Ij} \partial^\mu \phi_j .
+\end{aligned}
+\end{align}
+%
+Putting everything together we find
+\begin{align}
+    T^{\mu}{}_{\nu}
+    &= (\partial_YF) u^\mu \partial_\nu \phi^0
+    +(\partial_BF)2 B (B^{-1})^{Ij}\,\, \partial^\mu \phi_j \partial_\nu \phi^I
+    \\
+    &\quad
+    + \frac{(\partial_YF)}{2\sqrt{B}}
+    \epsilon^{\lambda\mu\beta\gamma}\,\epsilon_{Ijk}\,
+    \partial_\beta\phi^j\,\partial_\gamma\phi^k\,\partial_\lambda\phi^0\,\partial_\nu \phi^I
+    - (\partial_YF) Y\, (B^{-1})^{Ij} \partial^\mu \phi_j \partial_\nu \phi^I
+    - F\,\delta^{\mu}{}_{\nu}.
+\end{align}
+Using the identity (just plug in to check)
+\begin{align}
+    (B^{-1})^{ij}\,\partial^\mu\phi_j\,\partial_\nu\phi^i &= \delta^{\mu}{}_{\nu} + u^\mu u_\nu
+\end{align}
+% and decomposing \(\partial_\nu\phi^0 = -Y u_\nu + (\text{part orthogonal to }u_\nu)\), the orthogonal part drops out. The stress tensor reduces to
+% \begin{align}
+%     T^{\mu}{}_{\nu}
+%     &= \bigl(Y\,\partial_Y F - 2B\,\partial_B F\bigr) u^{\mu} u_{\nu}
+%        + \bigl(F - 2B\,\partial_B F\bigr)\,\delta^{\mu}{}_{\nu}.
+% \end{align}
+We finally get
+\begin{align}
+    T^{\mu}{}_{\nu}
+    &= \bigl(Y \partial_YF - 2B \partial_BF\bigr) u^{\mu} u_{\nu}
+       + \bigl(F - 2B \partial_BF\bigr)\,\delta^{\mu}{}_{\nu}.
+\end{align}
+
+\end{proof}
+Matching the expression to that of a perfect fluid
+\begin{equation}
+    T_{\mu\nu}=(\rho+p)u_\mu u_\nu + p \eta_{\mu\nu},
+\end{equation}
+idenifies the energy density and pressure as
+\begin{equation}
+    \rho = Y \partial_YF - F, \qquad
+    p = F - 2 B \partial_BF.
+\end{equation}
+
