--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -146,7 +146,7 @@ Normalizing we get again
 \begin{equation}
     u^\mu=\frac{1}{6\sqrt{B}}\epsilon^{\mu\alpha\beta\gamma}\epsilon_{ijk}\partial_\alpha \phi^i \partial_\beta \phi^j \partial_\gamma \phi^k,
 \end{equation}
-where now \(\epsilon^{\mu\alpha\beta\gamma}=\frac{1}{\sqrt{-g}}\tilde{\epsilon}^{\mu\alpha\beta\gamma}\) is the Levi-Civita tensor density.
+where \(\epsilon^{\alpha\beta\gamma\delta}=g^{\lambda\alpha}g^{\mu\beta}g^{\nu\gamma}g^{\rho\delta}{\epsilon}_{\lambda\mu\nu\rho}\) with ${\epsilon}_{\lambda\mu\nu\rho}$ totally antisymmetric Levi--Civita.
 The invariants are still
 \begin{equation}
     B:=\det B^{ij}, \quad Y:=u^\mu \partial_\mu \phi^0,
