--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 \input{other/my_preamble}
 \input{other/extra_preamble.tex}
 
-\title{Lagrangian Formulation of Fluids}
+\title{Accelerating the Universe with non-barotropic fluids}
 \author{Diego Redigolo \thanks{INFN, Florence section \& Physics Department, University of Florence (diego.redigolo@fi.infn.it)}
         \and Andrea Clini \thanks{Physics Department, University of Milan (andrea.clini@unimi.it)}
         \and La Pimpa
